# trueskill

./: EP Poisson Distribution.ipynb  LICENSE  Parameter.hs  Train.hs  TrueSkill.hs  Types.hs  bench_app.hs  bundesliga.hs  eval.sh  init_knobs.json  main.hs  rolling_predict_app.hs  team_eval.sh  train_app.hs  trueskill.cabal
TrueSkill/: Autodiff.hs  Math.hs  Message.hs  Model.hs  Poisson.hs
TrueSkill/Test/: Autodiff.hs
