name:                trueskill
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD2
license-file:        LICENSE
author:              Martin Kiefel
maintainer:          mk@nopw.de
-- copyright:
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable trueskill
  main-is:             main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
                     , lens >=4.2 && <4.3
                     , unordered-containers >=0.2 && <0.3
                     , bytestring >=0.10 && <0.11
                     , vector >=0.10 && <0.11
                     , cassava >=0.4 && <0.5
                     , either >=4.3 && <4.4
                     , transformers >=0.4 && <0.5
  -- hs-source-dirs:
  default-language:    Haskell2010
